--- a/book.bib
+++ b/book.bib
@@ -147,6 +147,17 @@
   year = {2016}
 }
 
+@article{burton2013,
+  title={Activity monitoring in patients with depression: a systematic review},
+  author={Burton, Christopher and McKinstry, Brian and T{\u{a}}tar, Aurora Szentagotai and Serrano-Blanco, Antoni and Pagliari, Claudia and Wolters, Maria},
+  journal={Journal of affective disorders},
+  volume={145},
+  number={1},
+  pages={21--28},
+  year={2013},
+  publisher={Elsevier}
+}
+
 @article{buysse2007,
   title={Daytime symptoms in primary insomnia: a prospective analysis using ecological momentary assessment},
   author={Buysse, Daniel J and Thompson, Wesley and Scott, John and Franzen, Peter L and Germain, Anne and Hall, Martica and Moul, Douglas E and Nofzinger, Eric A and Kupfer, David J},
@@ -194,6 +205,16 @@
   year = {2014}
 }
 
+@article{Conner2009,
+  title={Experience sampling methods: A modern idiographic approach to personality research},
+  author={Conner, Tamlin S and Tennen, Howard and Fleeson, William and Barrett, Lisa Feldman},
+  journal={Social and personality psychology compass},
+  volume={3},
+  number={3},
+  pages={292--313},
+  year={2009},
+  publisher={Wiley Online Library}
+}
 
 @Article{Conner2012a,
   author        = {Tamlin S. Conner and Lisa Feldman Barrett},
