--- a/book.bib
+++ b/book.bib
@@ -46,6 +46,16 @@
   year = {2016}
 }
 
+@article{Aung2017,
+  title={Sensing behavioral symptoms of mental health and delivering personalized interventions using mobile technologies},
+  author={Aung, Min Hane and Matthews, Mark and Choudhury, Tanzeem},
+  journal={Depression and anxiety},
+  volume={34},
+  number={7},
+  pages={603--609},
+  year={2017},
+  publisher={Wiley Online Library}
+}
 
 @Article{Bates2015,
   title = {Fitting Linear Mixed-Effects Models Using {lme4}},
@@ -486,6 +496,17 @@
   publisher={SAGE Publications Sage CA: Los Angeles, CA}
 }
 
+@article{Evenson2015,
+  title={Systematic review of the validity and reliability of consumer-wearable activity trackers},
+  author={Evenson, Kelly R and Goto, Michelle M and Furberg, Robert D},
+  journal={International Journal of Behavioral Nutrition and Physical Activity},
+  volume={12},
+  number={1},
+  pages={159},
+  year={2015},
+  publisher={BioMed Central}
+}
+
 @Book{FieldSPSS,
   title     = {Discovering Statistics Using IBM SPSS Statistics},
   publisher = {Sage Publications Ltd.},
@@ -577,6 +598,17 @@
   doi           = {10.1037/a0023660},
   keywords      = {Binge eating,Bulimia nervosa,Ecological momentary assessment,Negative affect},
   pmid          = {21574678},
+}
+
+@article{Haedt2012,
+  title={Experimental evidence that changes in mood cause changes in body dissatisfaction among undergraduate women},
+  author={Haedt-Matt, Alissa A and Zalta, Alyson K and Forbush, Kelsie T and Keel, Pamela K},
+  journal={Body image},
+  volume={9},
+  number={2},
+  pages={216--220},
+  year={2012},
+  publisher={Elsevier}
 }
 
 @Article{Hufford2002,
@@ -875,6 +907,16 @@ year = {1999}
   pmid     = {22784687},
 }
 
+@inproceedings{Patel2012,
+  title={Probing the benefits of real-time tracking during cancer care},
+  author={Patel, Rupa A and Klasnja, Predrag and Hartzler, Andrea and Unruh, Kenton T and Pratt, Wanda},
+  booktitle={AMIA Annual Symposium Proceedings},
+  volume={2012},
+  pages={1340},
+  year={2012},
+  organization={American Medical Informatics Association}
+}
+
 @article{Penninx2008,
   author = {Penninx, Brenda W J H and Beekman, Aartjan T F and Smit, Johannes H. and Zitman, Frans G. and Nolen, Willem A. and Spinhoven, Philip and Cuijpers, Pim and de Jong, Peter J. and van Marwijk, Harm W J and Assendelft, Willem J J and van der Meer, Klaas and Verhaak, Peter and Wensing, Michel and de Graaf, Ron and Hoogendijk, Witte J. and Ormel, Johan and van Dyck, Richard and {NESDA Research Consortium}},
   doi = {10.1002/mpr.256},
@@ -946,6 +988,17 @@ year = {1999}
   pages={25},
   year={2016},
   publisher={BioMed Central}
+}
+
+@article{Roenneberg2003,
+  title={Life between clocks: daily temporal patterns of human chronotypes},
+  author={Roenneberg, Till and Wirz-Justice, Anna and Merrow, Martha},
+  journal={Journal of biological rhythms},
+  volume={18},
+  number={1},
+  pages={80--90},
+  year={2003},
+  publisher={Sage Publications}
 }
 
 @Article{ruf1999,
