--- a/01_EMA.Rmd
+++ b/01_EMA.Rmd
@@ -23,7 +23,7 @@ With the increased adoption of EMA, comes a growing need for methodological guid
 
 ### Self-report versus Observational EMA
 \index{EMA!Self-report EMA} \index{EMA!Active EMA|see{Self-report EMA}}
-\index{Observational EMA} \index{EMA!Passive EMA|see{Observational EMA}}
+\index{EMA!Observational EMA} \index{EMA!Passive EMA|see{Observational EMA}}
 
 In EMA research, there are two forms of data collection: EMA based on self-report (active) and EMA based on observational (passive) data. Self-report requires participants to provide information, for example by rating their current mood, activities or social interaction on items that are presented to them during EMA. For observational EMA, information is collected through wearables or logfiles without active involvement of participants, for example on heart-rate, activity, smartphone use or engagement on social media. Some studies combine both forms of data collection, for example by using both a self-report sleep diary and an accelerometer in order to study sleeping patterns [@Meijden2016]. 
 
@@ -102,7 +102,7 @@ In more traditional longitudinal research, individuals are often assessed a limi
 ggplot(csd, aes(x = date, y = as.numeric(mood_down))) +
   geom_smooth(method = "loess", span = .05, se = FALSE, colour="black") + 
   geom_point(size = .3, alpha = .3, position = position_jitter(height = .1),
-  colour="grey44") +  scale_x_date() + scale_y_continuous(breaks = 1:7) +
+  colour="black") +  scale_x_date() + scale_y_continuous(breaks = 1:7) +
   xlab("Time") + ylab("Mood") +
    theme(panel.background = element_blank())
 ```  
@@ -129,37 +129,22 @@ malesuada fames ac turpis egestas. Vivamus enim turpis, pulvinar volutpat
 purus nec, lobortis imperdiet diam.  
 
 ## EMA research
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-vehicula augue metus, in tincidunt urna luctus sit amet. Sed ultrices, erat
-at laoreet semper, sem tellus hendrerit mi, eget pulvinar massa nisl ac
-dolor. Nunc ac tellus nec tortor interdum porta. Vestibulum hendrerit tempus
-condimentum. Donec a mollis sem. Aenean lectus nunc, bibendum ut orci vel,
-tristique pellentesque arcu. Vestibulum id laoreet neque. Phasellus at ex velit.
-Vestibulum scelerisque nulla ut massa tempor, ac dapibus dui viverra.
+In recent decades, research on mental health using EMA has produce an impressive trove of findings that have supported and sometimes, challenged existing theories on behavior. A key implication of EMA data is the temporal fluidity of cognition, affect, and behavior which are highly responsive to the context [@Shiffman2009]. EMA, whether collected as self-report or via wearable device/sensor, can have diagnostic, monitoring, management, or intervention applications (@Patel2012; @Aung2017; @Evenson2015]. Below is a non-exhaustive summary of systematic reviews or meta-analyses of research on mental health using EMA.
 
-Donec sed lectus at sem ultrices commodo. Proin a viverra metus, nec scelerisque
-odio. Morbi viverra tristique libero vel fringilla. Sed at varius erat, id
-consequat nibh. Ut eget leo blandit orci posuere tincidunt ac sed erat. Aenean
-metus metus, eleifend ut facilisis a, fringilla ut neque. Nunc hendrerit
-cursus eleifend. Pellentesque habitant morbi tristique senectus et netus et
-malesuada fames ac turpis egestas. Vivamus enim turpis, pulvinar volutpat
-purus nec, lobortis imperdiet diam.  
+### Self-report EMA
+\index{Self-report EMA}
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
-metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
-sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec
-tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis
-sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
-Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla
-ut massa tempor, ac dapibus dui viverra.  
+Mood disorders have been well-studied using EMA methods [@Wenze2010] with several reviews outlining recent findings in depression [@Telford2012; @Wichers2011; @burton2013], anxiety disorders [@Walz2014], depression/bipolar disorder [@AanhetRot2012].
+EMA is particularly suited to examine the role of emotions in development and maintenance of obesity and eating disorders [@Engel2016]. Meta-analytic results suggest that negative affect, rather than hunger, is associated with binge eating among individuals with eating disorders [@HaedtMatt2011; @Haedt2012]. 
+EMA methods have significantly contributed to the understanding of the processes that drive substance use, cessation, and relapse, often in contrast with theory-driven studies largely derived from global reports collected through questionnaires [@Shiffman2009].
 
-Donec sed lectus at sem ultrices commodo. Proin a viverra metus, nec scelerisque
-odio. Morbi viverra tristique libero vel fringilla. Sed at varius erat, id
-consequat nibh. Ut eget leo blandit orci posuere tincidunt ac sed erat. Aenean
-metus metus, eleifend ut facilisis a, fringilla ut neque. Nunc hendrerit
-cursus eleifend. Pellentesque habitant morbi tristique senectus et netus et
-malesuada fames ac turpis egestas. Vivamus enim turpis, pulvinar volutpat
-purus nec, lobortis imperdiet diam. 
+### Passive EMA
+\index{Passive sensing|see{EMA!Observational EMA}}
+\index{Passive EMA|see{EMA!Observational EMA}}
+
+A systematic review and meta-analysis on actigraphy reported diurnal variations in activity levels among individuals with depression [@burton2013]. The potential of passive sensing via smartphone for mental health research are outlined in two reviews, encompassing the assessment of health and well-being [@Cornet2017], and the measuring, understanding, and intervening in mental illness and maintaining mental health [@Aung2017]. Compared with traditional self-reports, passive sensing is less intrusive and provides more accurate data, continual monitoring, and feedback. However, studies identified in that review did not include clinical samples.
+
+
 
 Table: (\#tab:emareviews) Reviews of EMA studies targeting specific Mental
 Health Conditions
