--- a/01_EMA.Rmd
+++ b/01_EMA.Rmd
@@ -6,7 +6,7 @@
 
 \index{EMA} 
 \index{EMA!Synonyms} 
-\index{Ambulatory Assesment|see{EMA!Synonyms}} 
+\index{Ambulatory Assessment{EMA!Synonyms}} 
 \index{Experience Sampling|see{EMA!Synonyms}} 
 \index{Ambulatory Self-reporting|see{EMA!Synonyms}} 
 \index{Real-time Data Capturing|see{EMA!Synonyms}} 
@@ -55,7 +55,7 @@ Recall bias refers to the concern that in retrospective self-report information,
 EMA offers a unique opportunity to study change in individuals with repeated sampling. By doing this, EMA offers a quantitative method for idiographic research [@allport1937], measuring characteristics of (unique) individuals across time and context (within-subject) [@Shiffman2008]. This contrasts with more classic, nomothetic research, in which individuals are grouped together in order to study universal characteristics (between-subject). The relevance of idiographic research is illustrated in Figure 1 (\@ref(fig:fig01a)), where the individual effects of x on y are positive for individuals, but negative for the group as a whole. 
 In contrast to more qualitative idiographic studies, such as interviews and N=1 case studies, EMA leads to a large amount of information on each individual. This allows for testing of hypotheses. Also, by studying patterns in individuals (the intra-individual process), you can test whether individuals have similar relations between variables and which factors account for variability [@Conner2009]. This, then, allows you to make inferences to a larger population, combining both idiographic and nomothetic approaches.  
 
-```{r fig01a, echo = FALSE, fig.cap = "An extreme case of how indiviual effects may be different from group effects: the effect of x on y is positive for individuals (marked by ellipses), but negative for the group (as illustrated by the negative regression line)."}
+```{r fig01a, echo = FALSE, fig.cap = "An extreme case of how individual effects may be different from group effects: the effect of x on y is positive for individuals (marked by ellipses), but negative for the group (as illustrated by the negative regression line)."}
 
 # simulate individual
 sim_p <- function(id = 1, intercept = 0, x_start = 0){
@@ -129,7 +129,7 @@ malesuada fames ac turpis egestas. Vivamus enim turpis, pulvinar volutpat
 purus nec, lobortis imperdiet diam.  
 
 ## EMA research
-In recent decades, research on mental health using EMA has produce an impressive trove of findings that have supported and sometimes, challenged existing theories on behavior. A key implication of EMA data is the temporal fluidity of cognition, affect, and behavior which are highly responsive to the context [@Shiffman2009]. EMA, whether collected as self-report or via wearable device/sensor, can have diagnostic, monitoring, management, or intervention applications (@Patel2012; @Aung2017; @Evenson2015]. Below is a non-exhaustive summary of systematic reviews or meta-analyses of research on mental health using EMA.
+In recent decades, research on mental health using EMA has produce an impressive trove of findings that have supported and sometimes, challenged existing theories on behaviour. A key implication of EMA data is the temporal fluidity of cognition, affect, and behaviour which are highly responsive to the context [@Shiffman2009]. EMA, whether collected as self-report or via wearable device/sensor, can have diagnostic, monitoring, management, or intervention applications (@Patel2012; @Aung2017; @Evenson2015]. Below is a non-exhaustive summary of systematic reviews or meta-analyses of research on mental health using EMA.
 
 ### Self-report EMA
 \index{Self-report EMA}
@@ -144,17 +144,41 @@ EMA methods have significantly contributed to the understanding of the processes
 
 A systematic review and meta-analysis on actigraphy reported diurnal variations in activity levels among individuals with depression [@burton2013]. The potential of passive sensing via smartphone for mental health research are outlined in two reviews, encompassing the assessment of health and well-being [@Cornet2017], and the measuring, understanding, and intervening in mental illness and maintaining mental health [@Aung2017]. Compared with traditional self-reports, passive sensing is less intrusive and provides more accurate data, continual monitoring, and feedback. However, studies identified in that review did not include clinical samples.
 
+EMA has potential to make significant contributions to mental health research. However, there are some general limitations to consider.
+\index{Limitations} 
+\index{Limitations!Selected samples}
+\index{Limitations!Practive effect}
+\index{Limitations!Feasibility}
+\index{Limitations!Privacy}
+
+-	Selected samples, e.g. hospital in-patients [@burton2013]
+-	Practice effect [@Telford2012], reactivity and compliance [@Shiffman2009]
+-	Issues of feasibility and tolerability of prolonged and intense data periods of data collection [@Wichers2011]
+-	Issues of privacy, consent, and awareness [@Cornet2017]
+-	Responsibility of researcher, e.g. in suicide ideation research [@Wenze2010]
 
 
 Table: (\#tab:emareviews) Reviews of EMA studies targeting specific Mental
 Health Conditions
 
-| Disorder                        | Reference to Review                 | 
-|:--------------------------------|:------------------------------------|
-| Anxiety                         | @Walz2014                           |
-| Depression / Mood disorders     | @AanhetRot2012, @EbnerPriemerUlrich2009, @Telford2012, @Wenze2010, @Wichers2011 | 
-| Eating disorders                | @Engel2016, @HaedtMatt2011         |
-| Psychosis                       | @Oorschot2012                       |
-| Substance abuse                 | @Shiffman2009                       |
-| Well-being                      | @Cornet2017                         |
-
+| **Topic**        | **Author (Year)**        | **Outcome**        |
+|:--------------------|:--------------------|:--------------------|
+| Anxiety disorders | | |
+| | @Walz2014 | Provides insights to the temporal variability of symptoms, and associations between daily affect, behaviours, and situational cues. Combination of EMA and ambulatory assessment of physiological variables and treatment evaluations |
+| | | |
+| Eating disorders | | |
+| | @Engel2016| An overview of studies on eating disorders, obesity, and bariatric surgery using EMA |
+| | | |
+| Mood disorders | | |
+| | @AanhetRot2012 | Provides an overview of EMA studies on correlates of mood, treatment effects, residual symptoms of remitted patients, paediatric populations, MDD/BD specificity, and links with neuroscience |
+| | @Aung2017 | Provides conceptual review of passive sensing techniques for measuring, understanding, and treatment of mental illness, and maintenance of mental health |
+|| @burton2013 | Diurnal variations in activity levels among depressed individuals |
+| |@Telford2012 | Identified six themes of EMA research in MDD: methodology; positive and negative affect; cortisol secretion; antidepressant treatment; work performance; genetic risk factors |
+| | @Wenze2010 | Provides an overview of EMA in mood disorder research comprising techniques used, types of population assessed, types of research questions, and a discussion of the potential of EMA in treatment setting of mood disorders |
+| | @Wichers2011 | Provides an overview for the possible clinical application of EMA in the diagnostic and treatment of MDD |
+| | | |
+| Substance abuse| | |
+| | @Shiffman2009 | Review of processes that drive substance use, cessation, and relapse, sometimes in contrast with theory-driven studies that are largely derived from global reports collected through questionnaires |
+| | | |
+| Mental health/ Well-being | | |
+| | @Cornet2017 | Outlines the potential of passive sensing to detect status change and behaviour change following feedback on behaviour. Also outlines the challenges of using passive sensing |
